--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Prompt Generator</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Prompt Generator</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app">
-        <h1>AI Prompt Generator</h1>
-        <form id="prompt-form">
-            <label for="prompt">Enter your prompt:</label>
-            <input type="text" id="prompt" name="prompt" required>
-            <button type="submit">Generate</button>
-        </form>
-        <div id="result"></div>
-    </div>
-    <script src="app.js"></script>
+  <h1>AI Prompt Generator</h1>
+  <input id="prompt-input" type="text" placeholder="Enter your prompt...">
+  <button id="generate-button">Generate</button>
+  <p id="response"></p>
+  <script src="app.js"></script>
 </body>
 </html>
